Fixed table alignment

--- a/portal-app/src/app/home/home.component.scss
+++ b/portal-app/src/app/home/home.component.scss
@@ -28,7 +28,3 @@ body {
 .fa {
   padding: 0 4px;
 }
-
-.employeeTable {
-  width: 100%;
-}
